--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,11 +10,14 @@ services:
       PGRST_DB_ANON_ROLE: postgres
       PGRST_JWT_SECRET: "reallyreallyreallyreallyverysafe"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+      db-init:
+        condition: service_completed_successfully
   db:
     image: postgres:14
     ports:
-      - "127.0.0.1:5432:5432"
+      - "127.0.0.1:5433:5432"
     volumes:
       - ./test:/docker-entrypoint-initdb.d/
     environment:
@@ -22,3 +25,22 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_PORT: 5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
+  db-init:
+    image: postgres:14
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./test:/docker-entrypoint-initdb.d/
+    environment:
+      PGPASSWORD: postgres
+    entrypoint: ["/bin/sh","-c"]
+    command: >
+      "psql -h db -U postgres -d postgres -f /docker-entrypoint-initdb.d/00-schema.sql &&
+       psql -h db -U postgres -d postgres -f /docker-entrypoint-initdb.d/01-dummy-data.sql"
